; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_iseries_veth.c_veth_handle_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_iseries_veth.c_veth_handle_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HvLpEvent = type { i32 }
%struct.veth_lpevent = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.HvLpEvent*)* @veth_handle_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @veth_handle_event(%struct.HvLpEvent* %0) #0 {
  %2 = alloca %struct.HvLpEvent*, align 8
  %3 = alloca %struct.veth_lpevent*, align 8
  store %struct.HvLpEvent* %0, %struct.HvLpEvent** %2, align 8
  %4 = load %struct.HvLpEvent*, %struct.HvLpEvent** %2, align 8
  %5 = bitcast %struct.HvLpEvent* %4 to %struct.veth_lpevent*
  store %struct.veth_lpevent* %5, %struct.veth_lpevent** %3, align 8
  %6 = load %struct.HvLpEvent*, %struct.HvLpEvent** %2, align 8
  %7 = call i64 @hvlpevent_is_ack(%struct.HvLpEvent* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.veth_lpevent*, %struct.veth_lpevent** %3, align 8
  %11 = call i32 @veth_handle_ack(%struct.veth_lpevent* %10)
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.veth_lpevent*, %struct.veth_lpevent** %3, align 8
  %14 = call i32 @veth_handle_int(%struct.veth_lpevent* %13)
  br label %15

15:                                               ; preds = %12, %9
  ret void
}

declare dso_local i64 @hvlpevent_is_ack(%struct.HvLpEvent*) #1

declare dso_local i32 @veth_handle_ack(%struct.veth_lpevent*) #1

declare dso_local i32 @veth_handle_int(%struct.veth_lpevent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
